# ort

./: .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  build.rs  clippy.toml  codecov.yml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: backends.yml  code-quality.yml  custom-static-link.yml  other-checks.yml  test.yml
backends/candle/: Cargo.toml  api.rs  error.rs  lib.rs  memory.rs  session.rs  tensor.rs
backends/candle/standalone/: Cargo.toml  lib.rs
backends/candle/tests/: memory.rs  tensor.rs
backends/tract/: Cargo.toml  api.rs  error.rs  lib.rs  memory.rs  session.rs  tensor.rs
backends/tract/standalone/: Cargo.toml  build.rs  lib.rs
backends/tract/tests/: memory.rs  session.rs  tensor.rs
backends/web/: Cargo.toml  _loader.js  _telemetry.js  api.rs  env.rs  lib.rs  memory.rs  private.rs  session.rs  tensor.rs  util.rs
backends/web/binding/: mod.rs  session.rs  tensor.rs
benches/: squeezenet.rs
crates/ort/: Cargo.toml
crates/ort-macros/: Cargo.toml  LICENSE-MIT
crates/ort-macros/src/: lib.rs
crates/ort-sys/: Cargo.toml  LICENSE-MIT  build.rs
crates/ort/benches/: squeezenet.rs
crates/ort/src/: environment.rs  error.rs  lib.rs  memory.rs  metadata.rs  value.rs
crates/ort/src/execution_providers/: acl.rs  armnn.rs  cann.rs  coreml.rs  cpu.rs  cuda.rs  directml.rs  nnapi.rs  onednn.rs  openvino.rs  qnn.rs  rocm.rs  tensorrt.rs  tvm.rs  xnnpack.rs
crates/ort/src/operator/: bound.rs  kernel.rs
crates/ort/src/session/: input.rs  mod.rs  output.rs
crates/ort/src/tensor/: mod.rs
docs/: .gitignore  constants.ts  introduction.mdx  mdx-components.ts  mint.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  theme.config.jsx  tsconfig.json
docs/app/: globals.css  layout.tsx
docs/components/: ExecutionProviders.tsx  FooterEmoji.tsx  Ort.tsx  PlatformSelector.tsx  PlatformSupport.module.css  PlatformSupport.tsx  Sponsors.tsx
docs/content/: _meta.ts  _meta.tsx  index.mdx
docs/core/: ep.tsx  platform.tsx  utils.ts
docs/migrating/: opsets.mdx  v2.mdx  version-mapping.mdx
docs/pages/: _app.mdx  _app.tsx  _meta.json  _meta.tsx  globals.css  index.mdx
docs/perf/: execution-providers.mdx  io-binding.mdx
docs/setup/: cargo-features.mdx  linking.mdx  platforms.mdx  webassembly.mdx
docs/troubleshooting/: compiling.mdx  performance.mdx
examples/: README.md  Readme.md  gpt.rs  yolov8.rs
examples/all-mini-lm-l6/: Cargo.toml
examples/all-mini-lm-l6/examples/: all-mini-lm-l6.rs
examples/async-gpt2-api/: Cargo.toml  async-gpt2-api.rs
examples/async-gpt2-api/examples/: async-gpt2-api.rs
examples/common/: mod.rs
examples/cudarc/: Cargo.toml  cudarc.rs
examples/cudarc/data/: COPYRIGHT.md
examples/cudarc/src/: main.rs
examples/custom-ops/: Cargo.toml  custom-ops.rs
examples/gpt2/: Cargo.toml  gpt2.rs
examples/gpt2/examples/: gpt2-no-ndarray.rs  gpt2.rs
examples/model-info/: Cargo.toml  model-info.rs
examples/model-info/examples/: model-info.rs
examples/model-info/src/: lib.rs
examples/modnet/: Cargo.toml  README.md  modnet.rs
examples/modnet/examples/: modnet.rs
examples/phi-3-vision/: Cargo.toml  README.md
examples/phi-3-vision/data/: .gitignore  download.sh  genai_config.json
examples/phi-3-vision/src/: image_process.rs  main.rs
examples/sentence-transformers/: Cargo.toml  semantic-similarity.rs
examples/sentence-transformers/examples/: semantic-similarity.rs
examples/training/: Cargo.toml  README.md  build.rs  train-clm-simple.rs  train-clm.rs
examples/training/examples/: pretokenize.rs  train-clm-simple.rs  train-clm.rs
examples/wasm-emscripten/: .gitignore  Cargo.toml  README.md  build.rs  index.html  rust-toolchain.toml  serve.py
examples/wasm-emscripten/.cargo/: config.toml
examples/wasm-emscripten/pictures/: licenses.txt
examples/wasm-emscripten/src/: main.rs
examples/web-hands/: Cargo.toml  index.html
examples/web-hands/src/: detection.rs  lib.rs  resize.rs  ssd_anchors.rs
examples/webassembly/: Cargo.toml
examples/webassembly/src/: lib.rs  mnist.ort
examples/yolov8/: Cargo.toml  yolov8.rs
examples/yolov8/examples/: yolov8.rs
examples/yolov8/src/: main.rs
ort-sys/: Cargo.toml  LICENSE-MIT  build.rs  dist.txt
ort-sys/src/: lib.rs  link_error.rs  stub.rs  version.rs
ort-sys/src/internal/: dirs.rs  mod.rs
src/: adapter.rs  compiler.rs  device.rs  download.rs  environment.rs  error.rs  execution_providers.rs  io_binding.rs  lib.rs  logging.rs  memory.rs  metadata.rs  ort_value.rs  session.rs  sys.rs  tensor.rs  test_util.rs  util.rs  value.rs  wasm.rs
src/bindings/: bindings.rs
src/download/: language.rs  mod.rs  vision.rs
src/editor/: mod.rs  tests.rs
src/ep/: acl.rs  armnn.rs  azure.rs  cann.rs  coreml.rs  cpu.rs  cuda.rs  directml.rs  migraphx.rs  mod.rs  nnapi.rs  nvrtx.rs  onednn.rs  openvino.rs  qnn.rs  rknpu.rs  rocm.rs  tensorrt.rs  tvm.rs  vitis.rs  vsinpu.rs  wasm.rs  webgpu.rs  webnn.rs  xnnpack.rs
src/execution_providers/: acl.rs  armnn.rs  azure.rs  cann.rs  coreml.rs  cpu.rs  cuda.rs  directml.rs  migraphx.rs  mod.rs  nnapi.rs  nv.rs  nvrtx.rs  onednn.rs  openvino.rs  qnn.rs  rknpu.rs  rocm.rs  tensorrt.rs  tvm.rs  vitis.rs  wasm.rs  webgpu.rs  webnn.rs  xnnpack.rs
src/operator/: attribute.rs  bound.rs  erased.rs  io.rs  kernel.rs  mod.rs  tests.rs
src/session/: adapter.rs  async.rs  builder.rs  input.rs  io_binding.rs  metadata.rs  mod.rs  output.rs  run_options.rs
src/tensor/: mod.rs  ndarray.rs  ndarray_tensor.rs  ort_owned_tensor.rs  ort_tensor.rs  type_dynamic_tensor.rs  types.rs
src/training/: mod.rs  simple.rs  trainer.rs
src/util/: map.rs  mod.rs  mutex_spin.rs  mutex_std.rs  ndarray.rs  once_lock.rs  once_lock_spin.rs  once_lock_std.rs  stack.rs
src/value/: impl_map.rs  impl_sequence.rs  mod.rs  type.rs
tests/: mnist.rs  onnx.rs  squeezenet.rs  thread_manager.rs  upsample.rs  vectorizer.rs
tests/data/: adapter.orl  lora_model.onnx  (+1 more)
tools/: api-coverage.ts  requirements.txt  training-api-coverage.ts
(+77 files in other folders)
