[package]
name = "ort-candle"
description = "ort + candle = 🦀 - An alternative backend for ort, powered by candle."
version = "0.1.0+0.8"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pykeio/ort"
homepage = "https://ort.pyke.io/"
keywords = [ "machine-learning", "ai", "ml" , "sys"]
categories = [ "algorithms", "mathematics", "science" ]
authors = [
	"pyke.io <contact@pyke.io>"
]

[workspace]
resolver = "2"
members = [ "standalone" ]
default-members = []

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[lib]
name = "ort_candle"
path = "lib.rs"

[features]

[workspace.dependencies]
ort-sys = { version = "=2.0.0-rc.9", path = "../../ort-sys", default-features = false }

[dependencies]
ort-sys = { workspace = true }
candle-core = { version = "0.8.1", default-features = false }
candle-onnx = { version = "0.8.1" }
prost = { version = "0.12.1", default-features = false }

[dev-dependencies]
ort = { version = "=2.0.0-rc.9", path = "../../", default-features = false, features = [ "alternative-backend", "fetch-models" ] }

[[test]]
name = "memory"
path = "tests/memory.rs"
[[test]]
name = "tensor"
path = "tests/tensor.rs"
