[package]
name = "ort-tract"
description = "ort + tract = 🦀 - An alternative backend for ort, powered by tract."
version = "0.2.0+0.22"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pykeio/ort"
homepage = "https://ort.pyke.io/backends/tract"
keywords = [ "machine-learning", "ai", "ml" , "sys"]
categories = [ "algorithms", "mathematics", "science" ]
authors = [
	"pyke.io <contact@pyke.io>"
]

[workspace]
resolver = "3"
members = [ "standalone" ]
default-members = []

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[lib]
name = "ort_tract"
path = "lib.rs"

[features]

[workspace.dependencies]
ort-sys = { version = "=2.0.0-rc.10", path = "../../ort-sys", default-features = false }

[dependencies]
ort-sys = { workspace = true }
tract-onnx = "0.22"
parking_lot = "0.12"

[dev-dependencies]
ort = { version = "=2.0.0-rc.10", path = "../../", default-features = false, features = [ "alternative-backend", "fetch-models", "tls-rustls", "ndarray" ] }
image = "0.25"
ndarray = "0.16"

[[test]]
name = "memory"
path = "tests/memory.rs"
[[test]]
name = "tensor"
path = "tests/tensor.rs"
[[test]]
name = "session"
path = "tests/session.rs"
