[package]
name = "ort-sys"
description = "Unsafe Rust bindings for ONNX Runtime 1.17 - Optimize and Accelerate Machine Learning Inferencing"
include = [ "src/", "build.rs", "LICENSE-APACHE", "LICENSE-MIT" ]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
default = []
download-binaries = [ "ureq", "tar", "flate2", "sha2" ]
load-dynamic = []
copy-dylibs = []

cuda = []
tensorrt = []
openvino = []
onednn = []
directml = []
nnapi = []
coreml = []
xnnpack = []
rocm = []
acl = []
armnn = []
tvm = []
migraphx = []
rknpu = []
vitis = []
cann = []
qnn = []


[build-dependencies]
ureq = { version = "2.1", optional = true, default-features = false, features = [ "tls" ] }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
