[package]
name = "ort"
description = "A safe Rust wrapper for ONNX Runtime 1.17 - Optimize and Accelerate Machine Learning Inferencing"
include = [ "src/", "benches/", "LICENSE-APACHE", "LICENSE-MIT", "README.md" ]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
features = [ "ndarray", "half", "profiling", "custom-ops", "fetch-models", "copy-dylibs" ]
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ "ndarray", "half", "download-binaries", "copy-dylibs" ]

profiling = [ "widestring" ]
custom-ops = [ "libc", "winapi" ]
macros = [ "ort-macros" ]

fetch-models = [ "ureq" ]
download-binaries = [ "ort-sys/download-binaries" ]
load-dynamic = [ "libloading", "ort-sys/load-dynamic" ]
copy-dylibs = [ "ort-sys/copy-dylibs" ]

cuda = [ "ort-sys/cuda" ]
tensorrt = [ "ort-sys/tensorrt" ]
openvino = [ "ort-sys/openvino" ]
onednn = [ "ort-sys/onednn" ]
directml = [ "ort-sys/directml" ]
nnapi = [ "ort-sys/nnapi" ]
coreml = [ "ort-sys/coreml" ]
xnnpack = [ "ort-sys/xnnpack" ]
rocm = [ "ort-sys/rocm" ]
acl = [ "ort-sys/acl" ]
armnn = [ "ort-sys/armnn" ]
tvm = [ "ort-sys/tvm" ]
migraphx = [ "ort-sys/migraphx" ]
rknpu = [ "ort-sys/rknpu" ]
vitis = [ "ort-sys/vitis" ]
cann = [ "ort-sys/cann" ]
qnn = [ "ort-sys/qnn" ]

[dependencies]
ndarray = { version = "0.15", optional = true }
thiserror = "1.0"
ort-sys = { workspace = true }
libloading = { version = "0.8", optional = true }
compact_str = "0.7"
ort-macros = { workspace = true, optional = true }

ureq = { version = "2.1", optional = true, default-features = false, features = [ "tls" ] }
tracing = "0.1"
half = { version = "2.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = [ "std", "libloaderapi" ] }
widestring = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
ureq = "2.1"
image = "0.24"
test-log = { version = "0.2", default-features = false, features = [ "trace" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
glassbench = "0.4"

[[bench]]
name = "squeezenet"
harness = false
