[package]
publish = false
name = "example-model-info"
version = "0.0.0"
edition = "2021"

[lib]
name = "model_info"
crate-type = ["cdylib"]

[dependencies]
ort = { path = "../../" }
wasm-bindgen = "0.2.92"
web-sys = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

[features]
load-dynamic = [ "ort/load-dynamic" ]
