[package]
publish = false
name = "example-modnet"
version = "0.0.0"
edition = "2024"

[dependencies]
ort = { path = "../../", features = [ "fetch-models" ] }
ndarray = "0.16"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.25"
tracing = "0.1"
show-image = { version = "=0.14.0", features = [ "image", "raqote" ] }

ort-candle = { path = "../../backends/candle", optional = true }
ort-tract = { path = "../../backends/tract", optional = true }

[features]
load-dynamic = [ "ort/load-dynamic" ]

cuda = [ "ort/cuda" ]
tensorrt = [ "ort/tensorrt" ]
openvino = [ "ort/openvino" ]
onednn = [ "ort/onednn" ]
directml = [ "ort/directml" ]
nnapi = [ "ort/nnapi" ]
coreml = [ "ort/coreml" ]
xnnpack = [ "ort/xnnpack" ]
rocm = [ "ort/rocm" ]
acl = [ "ort/acl" ]
armnn = [ "ort/armnn" ]
tvm = [ "ort/tvm" ]
migraphx = [ "ort/migraphx" ]
rknpu = [ "ort/rknpu" ]
vitis = [ "ort/vitis" ]
cann = [ "ort/cann" ]
qnn = [ "ort/qnn" ]
webgpu = [ "ort/webgpu" ]
azure = [ "ort/azure" ]

backend-candle = [ "ort/alternative-backend", "dep:ort-candle" ]
backend-tract = [ "ort/alternative-backend", "dep:ort-tract" ]

[[example]]
name = "modnet"
path = "modnet.rs"
