[package]
publish = false
name = "example-sentence-transformers"
version = "0.0.0"
edition = "2021"

[dependencies]
ort = { path = "../../", features = [ "fetch-models" ] }
ndarray = "0.16"
tokenizers = { version = "0.19", default-features = false, features = [ "onig" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }

ort-candle = { path = "../../backends/candle", optional = true }
ort-tract = { path = "../../backends/tract", optional = true }

[features]
load-dynamic = [ "ort/load-dynamic" ]

cuda = [ "ort/cuda" ]
tensorrt = [ "ort/tensorrt" ]
openvino = [ "ort/openvino" ]
onednn = [ "ort/onednn" ]
directml = [ "ort/directml" ]
nnapi = [ "ort/nnapi" ]
coreml = [ "ort/coreml" ]
xnnpack = [ "ort/xnnpack" ]
rocm = [ "ort/rocm" ]
acl = [ "ort/acl" ]
armnn = [ "ort/armnn" ]
tvm = [ "ort/tvm" ]
migraphx = [ "ort/migraphx" ]
rknpu = [ "ort/rknpu" ]
vitis = [ "ort/vitis" ]
cann = [ "ort/cann" ]
qnn = [ "ort/qnn" ]
webgpu = [ "ort/webgpu" ]
azure = [ "ort/azure" ]

backend-candle = [ "ort/alternative-backend", "dep:ort-candle" ]
backend-tract = [ "ort/alternative-backend", "dep:ort-tract" ]

[[example]]
name = "semantic-similarity"
path = "semantic-similarity.rs"
