[package]
publish = false
name = "example-web-kitra-blazehand"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ort = { path = "../../", default-features = false, features = [ "alternative-backend", "api-17" ] }
ort-web = { path = "../../backends/web" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
anyhow = "1.0"

js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Navigator",
	"HtmlMediaElement",
	"HtmlVideoElement",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"Document",
	"MediaStream",
	"MediaDevices",
	"MediaStreamConstraints",
	"Window",
] }
