[package]
publish = false
name = "example-webassembly"
version = "0.0.0"
edition = "2021"

[lib]
name = "ortwasm"
crate-type = ["cdylib"]

[dependencies]
ort = { path = "../../" }
ndarray = "0.15"
wasm-bindgen = "0.2.92"
web-sys = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
image = { version = "0.25", default-features = false, features = [ "jpeg"  ]}

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

[features]
load-dynamic = [ "ort/load-dynamic" ]
